--- a/app/src/main/res/layout/activity_main_login.xml
+++ b/app/src/main/res/layout/activity_main_login.xml
@@ -7,6 +7,17 @@
     android:background="@drawable/fondo1"
     tools:context=".MainActivity_inicio" >
 
+    <TextView
+        android:id="@+id/txt_login_result"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        android:background="@color/white"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
     <ImageView
         android:id="@+id/img_logo"
         android:layout_width="203dp"
@@ -18,7 +29,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.101"
         app:srcCompat="@drawable/logo" />
-
 
     <EditText
         android:id="@+id/edt_usuario_login"
@@ -74,6 +84,7 @@
         android:layout_marginTop="136dp"
         android:background="@drawable/fondo_boton"
         android:contentDescription="@string/boton_entrar"
+        android:onClick="searchUsers"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.567"
@@ -81,6 +92,8 @@
         app:layout_constraintTop_toBottomOf="@+id/img_logo"
         app:layout_constraintVertical_bias="0.786"
         app:srcCompat="@drawable/boton_entra" />
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
