funciona la modificacion usuario ( solo lauraprueba) (siempre modifica contraseña a 1234)a cuaqluier usuario

--- a/app/src/main/res/layout/activity_main_mod_perfil.xml
+++ b/app/src/main/res/layout/activity_main_mod_perfil.xml
@@ -33,6 +33,7 @@
         android:ems="10"
         android:hint="@string/usuario_nombre"
         android:inputType="text"
+        android:textColor="@color/white"
         android:textColorHint="@color/hint"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/edt_direccion_mod_perfil"
@@ -51,6 +52,7 @@
         android:ems="10"
         android:hint="@string/usuario_direccion"
         android:inputType="text"
+        android:textColor="@color/white"
         android:textColorHint="@color/hint"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/edt_telefono_mod_perfil"
@@ -69,6 +71,7 @@
         android:ems="10"
         android:hint="@string/usuario_telefono"
         android:inputType="phone"
+        android:textColor="@color/white"
         android:textColorHint="@color/hint"
         app:layout_constraintBottom_toTopOf="@+id/switch_cambio_contraseña"
         app:layout_constraintEnd_toEndOf="parent"
@@ -105,6 +108,7 @@
         android:enabled="true"
         android:hint="@string/contraseña_anterior"
         android:inputType="textPassword"
+        android:textColor="@color/white"
         android:textColorHint="@color/hint"
         android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/edt_contraseña_nueva_mod_perfil"
@@ -126,6 +130,7 @@
         android:enabled="true"
         android:hint="@string/contraseña_nueva"
         android:inputType="textPassword"
+        android:textColor="@color/white"
         android:textColorHint="@color/hint"
         android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/edt_contraseña2_nueva_mod_perfil"
@@ -147,6 +152,7 @@
         android:enabled="true"
         android:hint="@string/contraseña2_nueva"
         android:inputType="textPassword"
+        android:textColor="@color/white"
         android:textColorHint="@color/hint"
         android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/ibtn_confirmar_mod_perfil"
