--- a/app/src/main/res/layout/activity_content.xml
+++ b/app/src/main/res/layout/activity_content.xml
@@ -20,11 +20,12 @@
         android:id="@+id/imageButton2"
         android:layout_width="68dp"
         android:layout_height="56dp"
+        android:contentDescription="@string/boton_modperfil"
+        android:onClick="changeProfile"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/ic_action_name"
-        android:contentDescription="@string/boton_modperfil"
-        android:onClick="changeProfile"/>
+        tools:ignore="ImageContrastCheck" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
