--- a/app/src/main/res/layout/activity_content.xml
+++ b/app/src/main/res/layout/activity_content.xml
@@ -46,7 +46,7 @@
         android:adjustViewBounds="true"
         android:background="@drawable/fondo_boton_redondo"
         android:contentDescription="@string/boton_modperfil"
-        android:onClick="gorro"
+        android:onClick="ajustes"
         android:scaleType="centerInside"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -54,9 +54,8 @@
         app:layout_constraintStart_toEndOf="@+id/btn_mod_perfil"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0"
-        app:srcCompat="@android:drawable/alert_light_frame"
         tools:ignore="ImageContrastCheck"
-        tools:srcCompat="@drawable/logo" />
+        tools:srcCompat="@android:drawable/ic_menu_manage" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_chefs"
