--- a/app/src/main/res/layout/activity_mod_perfil.xml
+++ b/app/src/main/res/layout/activity_mod_perfil.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/fondo1"
-    tools:context=".MainActivity_inicio" >
+    tools:context=".Activity_mod_perfil" >
 
     <TextView
         android:id="@+id/txt_modificacion"
