--- a/app/src/main/res/layout/custom_view.xml
+++ b/app/src/main/res/layout/custom_view.xml
@@ -81,6 +81,20 @@
                 app:layout_constraintStart_toEndOf="@+id/foto_chef"
                 app:layout_constraintTop_toBottomOf="@+id/tipo_comida"
                 app:layout_constraintVertical_bias="0.0" />
+
+            <RatingBar
+                android:id="@+id/ratingBar"
+                android:layout_width="185dp"
+                android:layout_height="39dp"
+                android:layout_marginStart="21dp"
+                android:layout_marginTop="13dp"
+                android:layout_marginEnd="31dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/foto_chef"
+                app:layout_constraintTop_toBottomOf="@+id/provincia" />
+
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
