activity nueva reserva calendario

--- a/app/src/main/res/layout/activity_reservar.xml
+++ b/app/src/main/res/layout/activity_reservar.xml
@@ -5,30 +5,29 @@
     android:layout_height="match_parent"
     android:background="@drawable/fondo1">
 
-
-    <TextView
-        android:id="@+id/txt_titulo_admin"
+    <CalendarView
+        android:id="@+id/calendarView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/titulo_lista_usuarios"
-        android:textColor="@color/titulo"
-        android:textSize="34sp"
+        android:layout_marginTop="50dp"
+        android:background="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.2"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.52" />
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_users"
-        android:layout_width="404dp"
-        android:layout_height="680dp"
+    <ImageButton
+        android:id="@+id/imageButton2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="200dp"
+        android:layout_marginBottom="50dp"
+        android:background="@drawable/fondo_boton"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.428"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
-
+        app:layout_constraintTop_toBottomOf="@+id/calendarView"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/boton_confirmar"
+        android:contentDescription="@string/boton_confirmar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
