--- a/app/src/main/res/layout/activity_content.xml
+++ b/app/src/main/res/layout/activity_content.xml
@@ -27,7 +27,7 @@
         android:layout_width="68dp"
         android:layout_height="56dp"
         android:background="@drawable/fondo_boton_redondo"
-        android:contentDescription="@string/boton_modperfil"
+        android:contentDescription="@string/boton_lupa"
         android:onClick="search"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btn_mod_perfil"
@@ -36,10 +36,10 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.994"
         app:srcCompat="@android:drawable/ic_menu_search"
-        tools:ignore="ImageContrastCheck,DuplicateSpeakableTextCheck" />
+        tools:ignore="ImageContrastCheck" />
 
     <ImageButton
-        android:id="@+id/btn_gorro"
+        android:id="@+id/btn_ajustes"
         android:layout_width="68dp"
         android:layout_height="56dp"
         android:layout_marginBottom="4dp"
@@ -54,8 +54,8 @@
         app:layout_constraintStart_toEndOf="@+id/btn_mod_perfil"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0"
-        tools:ignore="ImageContrastCheck"
-        tools:srcCompat="@android:drawable/ic_menu_manage" />
+        tools:srcCompat="@android:drawable/ic_menu_manage"
+        tools:ignore="ImageContrastCheck" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_chefs"
