--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,9 @@
     <color name="titulo">#62A2D5</color>
     <color name="azul">#71B1E4</color>
     <color name="lila">#6E31DA</color>
+    <color name="rojo">#FB0D0D</color>
+    <color name="naraja">#FB7247</color>
     <color name="titulo2">#4600C2</color>
+
 
 </resources>
