--- a/app/src/main/res/layout/activity_content.xml
+++ b/app/src/main/res/layout/activity_content.xml
@@ -7,64 +7,101 @@
     android:background="@drawable/fondo2"
     tools:context=".Activity_contenido" >
 
+
     <ImageButton
-        android:id="@+id/btn_mod_perfil"
+        android:id="@+id/btn_logout_user"
         android:layout_width="68dp"
         android:layout_height="56dp"
-        android:layout_marginBottom="4dp"
-        android:background="@drawable/fondo_boton_redondo"
-        android:contentDescription="@string/boton_modperfil"
-        android:onClick="changeProfile"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="712dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/fondo_boton_redondo_logout"
+        android:contentDescription="@string/boton_logout"
+        android:onClick="logout"
+        android:tintMode="src_in"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintEnd_toStartOf="@+id/btn_lupa"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/ic_action_name"
-        tools:ignore="ImageContrastCheck,DuplicateSpeakableTextCheck" />
+        app:layout_constraintTop_toTopOf="@+id/rv_chefs"
+        app:layout_constraintVertical_bias="0.978"
+        app:srcCompat="@android:drawable/ic_lock_power_off"
+        app:tint="@color/white"
+        tools:ignore="ImageContrastCheck" />
 
     <ImageButton
         android:id="@+id/btn_lupa"
         android:layout_width="68dp"
         android:layout_height="56dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="712dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
         android:background="@drawable/fondo_boton_redondo"
         android:contentDescription="@string/boton_lupa"
         android:onClick="search"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btn_mod_perfil"
-        app:layout_constraintHorizontal_bias="0.504"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.994"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/btn_logout_user"
+        app:layout_constraintTop_toTopOf="@+id/rv_chefs"
+        app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@android:drawable/ic_menu_search"
         tools:ignore="ImageContrastCheck" />
+
+    <ImageButton
+        android:id="@+id/btn_mod_perfil"
+        android:layout_width="68dp"
+        android:layout_height="56dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="712dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:adjustViewBounds="true"
+        android:background="@drawable/fondo_boton_redondo"
+        android:contentDescription="@string/boton_modperfil"
+        android:onClick="changeProfile"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/btn_ajustes"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/btn_lupa"
+        app:layout_constraintTop_toTopOf="@+id/rv_chefs"
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@drawable/ic_action_name"
+        tools:ignore="ImageContrastCheck"
+        tools:layout_editor_absoluteX="224dp" />
 
     <ImageButton
         android:id="@+id/btn_ajustes"
         android:layout_width="68dp"
         android:layout_height="56dp"
-        android:layout_marginBottom="4dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="712dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
         android:adjustViewBounds="true"
         android:background="@drawable/fondo_boton_redondo"
-        android:contentDescription="@string/boton_modperfil"
+        android:contentDescription="@string/boton_ajustes"
         android:onClick="ajustes"
-        android:scaleType="centerInside"
+        android:tintMode="src_in"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.548"
+        app:layout_constraintHorizontal_bias="0.86"
         app:layout_constraintStart_toEndOf="@+id/btn_mod_perfil"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
-        tools:srcCompat="@android:drawable/ic_menu_manage"
-        tools:ignore="ImageContrastCheck" />
+        app:layout_constraintTop_toTopOf="@+id/rv_chefs"
+        app:layout_constraintVertical_bias="0.957"
+        app:tint="@color/white"
+        tools:ignore="ImageContrastCheck"
+        tools:srcCompat="@android:drawable/ic_menu_manage" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_chefs"
-        android:layout_width="408dp"
-        android:layout_height="746dp"
-        android:layout_marginBottom="17dp"
-        app:layout_constraintBottom_toTopOf="@+id/btn_mod_perfil"
+        android:layout_width="414dp"
+        android:layout_height="701dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
