--- a/app/src/main/res/layout/activity_reservar.xml
+++ b/app/src/main/res/layout/activity_reservar.xml
@@ -22,6 +22,7 @@
         android:layout_marginTop="200dp"
         android:layout_marginBottom="50dp"
         android:background="@drawable/fondo_boton"
+        android:onClick="reservar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
