boton logout en TODAS PANTALLAS!

--- a/app/src/main/res/layout/activity_chef_ampliado.xml
+++ b/app/src/main/res/layout/activity_chef_ampliado.xml
@@ -138,5 +138,21 @@
         app:srcCompat="@drawable/boton_contactar"
         tools:ignore="ImageContrastCheck" />
 
+    <ImageButton
+        android:id="@+id/btn_logout_user"
+        android:layout_width="68dp"
+        android:layout_height="56dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginBottom="24dp"
+        android:background="@drawable/fondo_boton_redondo_logout"
+        android:contentDescription="@string/boton_modperfil"
+        android:onClick="logout"
+        android:tintMode="src_in"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@android:drawable/ic_lock_power_off"
+        app:tint="@color/white"
+        tools:ignore="ImageContrastCheck" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
