--- a/app/src/main/res/layout/activity_busqueda.xml
+++ b/app/src/main/res/layout/activity_busqueda.xml
@@ -33,6 +33,7 @@
         android:minHeight="48dp"
         android:popupBackground="@drawable/fondo_spinner"
         android:textColor="@color/black"
+        app:layout_constraintHorizontal_bias="0.50"
         app:layout_constraintBottom_toTopOf="@+id/txt_tipo_comida"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -62,7 +63,7 @@
         android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/txt_servicio"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.508"
+        app:layout_constraintHorizontal_bias="0.50"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
@@ -89,7 +90,7 @@
         android:popupBackground="@drawable/fondo_spinner"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintHorizontal_bias="0.50"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_servicio"
      />
@@ -104,12 +105,33 @@
         android:onClick="confirmarBusqueda"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.50"
+        app:layout_constraintHorizontal_bias="0.954"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/spinner_servicios"
+        app:layout_constraintVertical_bias="0.973"
         app:srcCompat="@drawable/boton_confirmar"
         tools:ignore="ImageContrastCheck" />
 
+    <ImageButton
+        android:id="@+id/btn_logout_user"
+        android:layout_width="68dp"
+        android:layout_height="56dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="233dp"
+        android:layout_marginEnd="319dp"
+        android:layout_marginBottom="44dp"
+        android:background="@drawable/fondo_boton_redondo_logout"
+        android:contentDescription="@string/boton_modperfil"
+        android:onClick="logout"
+        android:tintMode="src_in"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spinner_servicios"
+        app:srcCompat="@android:drawable/ic_lock_power_off"
+        app:tint="@color/white"
+        tools:ignore="ImageContrastCheck" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
