--- a/app/src/main/res/layout/activity_mod_perfil.xml
+++ b/app/src/main/res/layout/activity_mod_perfil.xml
@@ -172,12 +172,27 @@
         android:onClick="confirmaCambios"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.50"
+        app:layout_constraintHorizontal_bias="0.846"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edt_contraseña2_nueva_mod_perfil"
         app:srcCompat="@drawable/boton_confirmar" />
 
-
+    <ImageButton
+        android:id="@+id/btn_logout_user"
+        android:layout_width="68dp"
+        android:layout_height="56dp"
+        android:layout_marginBottom="64dp"
+        android:background="@drawable/fondo_boton_redondo_logout"
+        android:contentDescription="@string/boton_modperfil"
+        android:onClick="logout"
+        android:tintMode="src_in"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.046"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@android:drawable/ic_lock_power_off"
+        app:tint="@color/white"
+        tools:ignore="ImageContrastCheck" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
