--- a/app/src/main/res/layout/activity_user_ampliado.xml
+++ b/app/src/main/res/layout/activity_user_ampliado.xml
@@ -184,21 +184,41 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/servicio_usuario" />
 
+    <ImageButton
+        android:id="@+id/btn_logout_user"
+        android:layout_width="68dp"
+        android:layout_height="56dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="84dp"
+        android:layout_marginEnd="72dp"
+        android:layout_marginBottom="65dp"
+        android:background="@drawable/fondo_boton_redondo_logout"
+        android:contentDescription="@string/boton_modperfil"
+        android:onClick="logout"
+        android:tintMode="src_in"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/ibtn_edit"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/valoracion_usuario"
+        app:srcCompat="@android:drawable/ic_lock_power_off"
+        app:tint="@color/white"
+        tools:ignore="ImageContrastCheck" />
 
     <ImageButton
         android:id="@+id/ibtn_edit"
         android:layout_width="67dp"
         android:layout_height="57dp"
-        android:layout_marginStart="110dp"
-        android:layout_marginTop="90dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="60dp"
+
+
+        android:layout_marginTop="84dp"
+
+        android:layout_marginBottom="65dp"
         android:background="@drawable/fondo_boton_redondo"
         android:contentDescription="@string/boton_editar"
         android:onClick="editarUsuario"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/ibtn_delete"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/btn_logout_user"
         app:layout_constraintTop_toBottomOf="@+id/valoracion_usuario"
         app:srcCompat="@android:drawable/ic_menu_edit"
         tools:ignore="ImageContrastCheck" />
@@ -207,9 +227,9 @@
         android:id="@+id/ibtn_delete"
         android:layout_width="67dp"
         android:layout_height="57dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="110dp"
-        android:layout_marginBottom="60dp"
+        android:layout_marginStart="72dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="65dp"
         android:background="@drawable/fondo_boton_redondo"
         android:contentDescription="@string/boton_borrar"
         android:onClick="borrarUsuario"
